--- a/packages/platform/atoms/package.json
+++ b/packages/platform/atoms/package.json
@@ -49,6 +49,7 @@
     "./add-members-switch": "./add-members-switch/index.ts",
     "./add-members-switch/AddMembersWithSwitchPlatformWrapper": "./add-members-switch/AddMembersWithSwitchPlatformWrapper.tsx",
     "./add-members-switch/AddMembersWithSwitchWebWrapper": "./add-members-switch/AddMembersWithSwitchWebWrapper.tsx",
+    "./add-members-switch/SettingsToggle": "./add-members-switch/SettingsToggle.tsx",
     "./availability/AvailabilitySettings": "./availability/AvailabilitySettings.tsx",
     "./booker": "./booker/index.ts",
     "./components/ui/shell": "./src/components/ui/shell.tsx",
