--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -92,6 +92,7 @@
     "dompurify": "^3.1.7",
     "dotenv-cli": "^6.0.0",
     "entities": "^4.4.0",
+    "firebase-admin": "^13.1.0",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.7",
     "ical.js": "^1.4.0",
