--- a/packages/app-store/kyzon-space/config.json
+++ b/packages/app-store/kyzon-space/config.json
@@ -2,9 +2,9 @@
   "/*": "Don't modify slug - If required, do it using cli edit command",
   "name": "KYZON Space",
   "slug": "kyzon-space",
-  "type": "kyzon-space_conferencing",
+  "type": "kyzon-space_video",
   "logo": "icon.svg",
-  "url": "https://example.com/link",
+  "url": "https://kyzonsolutions.com",
   "variant": "conferencing",
   "categories": ["conferencing"],
   "publisher": "KYZON Solutions",
@@ -13,13 +13,12 @@
     "location": {
       "type": "integrations:{SLUG}_video",
       "label": "{TITLE}",
-      "linkType": "static",
-      "organizerInputPlaceholder": "https://video.app/mylink",
-      "urlRegExp": "^http(s)?:\\/\\/(www\\.)?video.app\\/[a-zA-Z0-9]*"
+      "linkType": "dynamic"
     }
   },
   "description": "KYZON Space is a browser-based platform that makes it easy to present, collaborate, and edit documents on video calls.",
   "isTemplate": false,
   "__createdUsingCli": true,
-  "__template": "event-type-location-video-static"
+  "__template": "event-type-location-video-static",
+  "isOAuth": true
 }
