--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,9 +56,8 @@
     "@googleapis/oauth2": "^1.0.7",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
-    "@lingo.dev/_sdk": "^0.7.27",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@next/bundle-analyzer": "^13.1.6",
+    "@next/bundle-analyzer": "^15.5.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -99,6 +98,7 @@
     "jsdom": "^22.0.0",
     "kbar": "^0.1.0-beta.36",
     "libphonenumber-js": "^1.11.18",
+    "lingo.dev": "0.111.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.3.1",
     "markdown-it": "^13.0.1",
